@@ -1,4 +1,5 @@
 v0.10
+	* FIX : zoom around cursor position
 	* ADD : import NMEA logs (crude) (by Chris Browet)
 	* FIX : proper handling of dirty documents (by Chris Browet)
 	* ADD : search on name/tags (by Chris Browet)
